--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bienvenue à tous sur la plateforme d'entrainement</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bienvenue à tous sur la plateforme d'entrainement</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/zozor.png">
 </head>
-  
+
 <body>
-    <h1>Hello World !</h1>
-    <h2>Bienvenue chez Zozor</h2>
-    <p id="JeromeHT">Hello Guys</p>
-</body>
-</html>
+    <main>
+        <img src="images/zozor.png" alt="Logo de Zozor" class="logo" />
+        <h1>Bonjour tout le monde !</h1>
+        <h2>Bienvenue chez Zozor</h2>
+        <h3>Le groupe de choc du Développement Web</h3>
+        <p id="JeromeHT">Hello Guys</p>
+    </main>
+</body></html>
 
